define new apis
+ /peer/network
+ /peer/heartbeat
