# apis/swagger.yml
@@ -664,7 +664,7 @@ paths:
         200:
           description: "no error"
           schema:
-            $ref: "#/definitions/ResultInfo"
+            $ref: "#/definitions/HeartBeatResponse"
         500:
           $ref: "#/responses/500ErrorResponse"
 
@@ -1510,6 +1510,27 @@ definitions:
           When user wishes to download an image/file, user would start a dfget process to do this.
           This dfget is treated a client and carries a client ID.
           Thus, multiple dfget processes on the same peer have different CIDs.
+
+  HeartBeatResponse:
+    type: "object"
+    description: ""
+    properties:
+      version:
+        type: "string"
+        description: |
+          The version of supernode. If supernode restarts, version should be different, so dfdaemon could know
+          the restart of supernode.
+      needRegister:
+        type: "boolean"
+        description: |
+          If peer do not register in supernode, set needRegister to be true, else set to be false.
+      seedTaskIDs:
+        type: "array"
+        description: |
+          The array of seed taskID which now are selected as seed for the peer. If peer have other seed file which
+          is not included in the array, these seed file should be weed out.
+        items:
+          type: "string"
 
   ErrorResponse:
     type: "object"
